# p_choa

./: .gitignore
project_choa/: pyproject.toml
project_choa/src/project_choa/notebook/: .env  choa (edit accounting).ipynb  choa (edit accounting_ t accounting=0.1).ipynb  choa.ipynb  test.csv  test_82.csv  test_88.csv  test_91.csv  test_accounting.csv  test_accounting_72.csv  test_accounting_76.csv  test_accounting_79.csv  test_accounting_80.csv  test_accounting_86.csv  test_ask.csv  test_ask_88.csv  test_ask_91.csv  test_ask_95.csv
project_choa/src/project_choa/notebook/content/: db.faiss  db.pkl
project_choa/src/project_choa/webservice/: fact.drawio  plan.drawio  requirements.txt
project_choa/src/project_choa/webservice/api/: .env  accounting.py  ai.py  analyze.py  ask.py  avatar.py  choaAI.py  core_and_router.py  joke.py  main.py
project_choa/src/project_choa/webservice/api/content/: journal.csv  journal_of_operations.csv
project_choa/src/project_choa/webservice/api/telegram/: bot.py
project_choa/src/project_choa/webservice/telegram/: .env  bot.py
